syntax = "proto3";

package ardapoc.rent;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ardapoc/rent/params.proto";
import "ardapoc/rent/lease.proto";

option go_package = "github.com/ardaglobal/arda-poc/x/rent/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/rent/params";
  
  }
  
  // Queries a list of Lease items.
  rpc Lease    (QueryGetLeaseRequest) returns (QueryGetLeaseResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/rent/lease/{id}";
  
  }
  rpc LeaseAll (QueryAllLeaseRequest) returns (QueryAllLeaseResponse) {
    option (google.api.http).get = "/ardaglobal/arda-poc/rent/lease";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetLeaseRequest {
  uint64 id = 1;
}

message QueryGetLeaseResponse {
  Lease Lease = 1 [(gogoproto.nullable) = false];
}

message QueryAllLeaseRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLeaseResponse {
  repeated Lease                                  Lease      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

